# skills

./: CLAUDE.md  README.md  install-slurm-assistant.ps1  install-slurm-assistant.sh
.github/workflows/: rust-build-cross-platform.yml  rust-ci.yml  slurm-assistant-eval.yml
slurm-assistant/: OPTIMIZATION.md  SKILL.md
slurm-assistant/evals/: cases.json  judge.py  run_eval.sh  run_live_eval.py
slurm-assistant/references/: api-contract-v0.md  architecture-v0.excalidraw  architecture-v0.md  commands.md  common_errors.md  gzu_public_resources.md  job_templates.md  minimal_decision_tree.md  set_free_password.md  test-plan-v0.md  use_gzu.md  use_local.md  use_other.md  workflow_env_config.md  workflow_file_transfer.md  workflow_init.md  workflow_job.md  workflow_local_execution.md  workflow_status.md
slurm-assistant/rust/: Cargo.toml
slurm-assistant/rust/crates/slurm-client/: Cargo.toml
slurm-assistant/rust/crates/slurm-client/src/: main.rs
slurm-assistant/rust/crates/slurm-proto/: Cargo.toml
slurm-assistant/rust/crates/slurm-proto/src/: lib.rs
slurm-assistant/rust/crates/slurm-server/: Cargo.toml
slurm-assistant/rust/crates/slurm-server/src/: main.rs
slurm-assistant/rust/scripts/: live_recovery_smoke_gzu.sh  live_smoke_gzu.sh
slurm-assistant/scripts/: slurm-cli.py
