[package]
name = "slurm-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
slurm-proto = { path = "../slurm-proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
